log/build_2024-07-23_10-34-17/drone_control/stdout_stderr.log
running egg_info
writing ../../build/drone_control/drone_control.egg-info/PKG-INFO
writing dependency_links to ../../build/drone_control/drone_control.egg-info/dependency_links.txt
writing entry points to ../../build/drone_control/drone_control.egg-info/entry_points.txt
writing requirements to ../../build/drone_control/drone_control.egg-info/requires.txt
writing top-level names to ../../build/drone_control/drone_control.egg-info/top_level.txt
reading manifest file '../../build/drone_control/drone_control.egg-info/SOURCES.txt'
writing manifest file '../../build/drone_control/drone_control.egg-info/SOURCES.txt'
running build
running build_py
copying drone_control/open_loop_control.py -> /home/zuri2102/sharedDocuments/bwsi-uav-good/flying_squirrels_architecture/build/drone_control/build/lib/drone_control
copying drone_control/__init__.py -> /home/zuri2102/sharedDocuments/bwsi-uav-good/flying_squirrels_architecture/build/drone_control/build/lib/drone_control
running install
running install_lib
copying /home/zuri2102/sharedDocuments/bwsi-uav-good/flying_squirrels_architecture/build/drone_control/build/lib/drone_control/open_loop_control.py -> /home/zuri2102/sharedDocuments/bwsi-uav-good/flying_squirrels_architecture/install/drone_control/lib/python3.10/site-packages/drone_control
byte-compiling /home/zuri2102/sharedDocuments/bwsi-uav-good/flying_squirrels_architecture/install/drone_control/lib/python3.10/site-packages/drone_control/open_loop_control.py to open_loop_control.cpython-310.pyc
  File "/home/zuri2102/sharedDocuments/bwsi-uav-good/flying_squirrels_architecture/install/drone_control/lib/python3.10/site-packages/drone_control/open_loop_control.py", line 10
    self.subscription = self.create_subscription(#TODO, TODO, self.open_loop_callback, 10) # message type, topic name, callback function, queue size
                                                ^
SyntaxError: '(' was never closed

running install_data
copying resource/drone_control -> /home/zuri2102/sharedDocuments/bwsi-uav-good/flying_squirrels_architecture/install/drone_control/share/ament_index/resource_index/packages
copying package.xml -> /home/zuri2102/sharedDocuments/bwsi-uav-good/flying_squirrels_architecture/install/drone_control/share/drone_control
running install_egg_info
removing '/home/zuri2102/sharedDocuments/bwsi-uav-good/flying_squirrels_architecture/install/drone_control/lib/python3.10/site-packages/drone_control-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/drone_control/drone_control.egg-info to /home/zuri2102/sharedDocuments/bwsi-uav-good/flying_squirrels_architecture/install/drone_control/lib/python3.10/site-packages/drone_control-0.0.0-py3.10.egg-info
running install_scripts
Installing open_loop_node script to /home/zuri2102/sharedDocuments/bwsi-uav-good/flying_squirrels_architecture/install/drone_control/lib/drone_control
writing list of installed files to '/home/zuri2102/sharedDocuments/bwsi-uav-good/flying_squirrels_architecture/build/drone_control/install.log'
